@@ -1,7 +1,10 @@
 0.51
         New "summary" metadata field for one-line summaries of nodes.
         Add "summary" field to RDF as dc:description.
+        Show node summary in search results.
         Add "address" field that had got missed out from the RDF.
+        Fix bug that was breaking coordinate entry fields on search page if lat/lon
+          was being used.
         Replace underscores in node names in redirection message with spaces.
         Redirection message now links to a rendered version of the old page
          rather than the editing view.
